--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title> html e css feliz </title>
+    <title> Html e css feliz </title>
 
     <!-- Os 3 primeiros links são referentes a font que foi resgatada do fonts.google.com, no css a gente usa essa font baixada com a tag Font-Family + nome da font. 
         Utilizando isso até mesmo uma máquina que não possui a font baixada consegue utilizar pois o navegador pega ela da internet com o link que foi utilizado-->
