Create the title component

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
         Utilizando isso até mesmo uma máquina que não possui a font baixada consegue utilizar pois o navegador pega ela da internet com o link que foi utilizado-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/components/title.css">
 </head>
 <body>
     <header>
@@ -24,5 +25,6 @@
         </nav>
     </header>
 </body>
+    <h1> Jonathan Lopes </h1>
 
 </html>
