--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/components/title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
+    <link rel="stylesheet" href="css/components/box.css">
 </head>
 <body>
     <header>
@@ -26,7 +27,10 @@
         </nav>
     </header>
 </body>
-    <h1> Jonathan Lopes </h1>
-    <h2> FrontEnd Developer </h2>
+    
+    <div id="box"> 
+        <h1> Jonathan Lopes </h1>
+        <h2> FrontEnd Developer </h2>
+    </div>
 
 </html>
