--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/components/header.css">
+    <link rel="stylesheet" href="css/components/banner.css">
     <link rel="stylesheet" href="css/components/action.css">
     <link rel="stylesheet" href="css/components/button.css">
     <link rel="stylesheet" href="css/components/title.css">
@@ -29,12 +30,16 @@
         </nav>
     </header>
 </body>
-    
-    <div class="box"> 
-        <h1 class="title"> Jonathan Lopes </h1>
-        <h2 class="subtitle"> FrontEnd Developer </h2>
-    </div>
-
-    <a class="button" href="" lang="en"> Download CV </a>
-    <a class="button" href=""> Contatos </a>
+    <section class="banner">
+        <div class="wrapper"> 
+            <div class="box"> 
+                <h1 class="title"> Jonathan Lopes </h1>
+                <h2 class="subtitle"> FrontEnd Developer </h2>
+            </div>
+            <div class="navigation"> 
+                <a class="button" href="" lang="en"> Download CV </a>
+                <a class="button" href=""> Contatos </a>
+            </div>
+        </div>
+    </section>
 </html>
