Create the wrapper-project component

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="css/components/skill-tec.css">
     <link rel="stylesheet" href="css/components/wrapper-skill.css">
     <link rel="stylesheet" href="css/components/progress-bar.css">
+    <link rel="stylesheet" href="css/components/wrapper-project.css">
     
     
 </head>
@@ -74,18 +75,19 @@
 
     <section class="section -bgProject -bdProject">
         <h2 class="main-title -second">Projetos</h2>
+        <div class="wrapper-project">
+            <figure>
+                <img class="projectsimg" src=".//assets/img/luffy.jpg" alt="Link projeto portifólio">
+            </figure>
 
-        <figure>
-            <img class="projectsimg" src=".//assets/img/luffy.jpg" alt="Link projeto portifólio">
-        </figure>
+            <figure>
+                <img class="projectsimg" src=".//assets/img/luffy2.jpg" alt="Link projeto teste">
+            </figure>
 
-        <figure>
-            <img class="projectsimg" src=".//assets/img/luffy2.jpg" alt="Link projeto teste">
-        </figure>
-
-        <figure>
-            <img class="projectsimg" src=".//assets/img/luffy3.jpg" alt="Link projeto direita">
-        </figure>
+            <figure>
+                <img class="projectsimg" src=".//assets/img/luffy3.jpg" alt="Link projeto direita">
+            </figure>
+        </div>
     </section>
 
 </html>
