Add the links to project section

--- a/index.html
+++ b/index.html
@@ -76,17 +76,23 @@
     <section class="section -bgProject -bdProject">
         <h2 class="main-title -second">Projetos</h2>
         <div class="wrapper-project">
-            <figure>
-                <img class="projectsimg" src=".//assets/img/luffy.jpg" alt="Link projeto portifólio">
-            </figure>
-
-            <figure>
-                <img class="projectsimg" src=".//assets/img/luffy2.jpg" alt="Link projeto teste">
-            </figure>
-
-            <figure>
-                <img class="projectsimg" src=".//assets/img/luffy3.jpg" alt="Link projeto direita">
-            </figure>
+            <!-- Nesse caso todos os link dos projetos foram encaminhados para própria página do portifólio, pois por enquanto não há nenhum projeto além desse, mas 
+            ao concluir o próximo o link dele será adicionado.-->
+            <a href="index.html">
+                <figure>
+                        <img class="projectsimg" src=".//assets/img/luffy.jpg" alt="Link projeto portifólio">
+                </figure>
+            </a>
+            <a href="index.html">
+                <figure>
+                    <img class="projectsimg" src=".//assets/img/luffy2.jpg" alt="Link projeto teste">
+                </figure>
+            </a>
+            <a href="index.html">
+                <figure>
+                    <img class="projectsimg" src=".//assets/img/luffy3.jpg" alt="Link projeto direita">
+                </figure>
+            </a>
         </div>
     </section>
 
