--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/components/header.css">
+    <link rel="stylesheet" href="css/components/main-header.css">
     <link rel="stylesheet" href="css/components/main-banner.css">
     <link rel="stylesheet" href="css/components/main-action.css">
     <link rel="stylesheet" href="css/components/main-button.css">
@@ -26,7 +26,7 @@
     
 </head>
 <body>
-    <header class="header">
+    <header class="main-header">
         <img id="logo" src="assets/img/poke.png" alt="Avatar do Jonathan">
         <nav>
             <a class="main-action" href="" lang="en" "> Skills </a>
