Change the subtitle to main-subtitle

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="css/components/main-action.css">
     <link rel="stylesheet" href="css/components/main-button.css">
     <link rel="stylesheet" href="css/components/main-title.css">
-    <link rel="stylesheet" href="css/components/subtitle.css">
+    <link rel="stylesheet" href="css/components/main-subtitle.css">
     <link rel="stylesheet" href="css/components/main-box.css">
-    <link rel="stylesheet" href="css/components/section.css">
+    <link rel="stylesheet" href="css/components/main-section.css">
     <link rel="stylesheet" href="css/components/skill-tec.css">
     <link rel="stylesheet" href="css/components/wrapper-skill.css">
     <link rel="stylesheet" href="css/components/progress-bar.css">
@@ -41,7 +41,7 @@
         <div class="wrapper"> 
             <div class="main-box"> 
                 <h1 class="main-title"> Jonathan Lopes </h1>
-                <h2 class="subtitle"> FrontEnd Developer </h2>
+                <h2 class="main-subtitle"> FrontEnd Developer </h2>
             </div>
             <div class="navigation"> 
                 <a class="main-button" href="" lang="en"> Download CV </a>
@@ -50,7 +50,7 @@
         </div>
     </section>
         
-    <section class="section">
+    <section class="main-section">
         <h2 class="main-title -second"> Skills</h2>
 
         <div class="wrapper-skill">
@@ -73,7 +73,7 @@
          </div>
     </section>
 
-    <section class="section -bgProject -bdProject">
+    <section class="main-section -bgProject -bdProject">
         <h2 class="main-title -second">Projetos</h2>
         <div class="wrapper-project">
             <!-- Nesse caso todos os link dos projetos foram encaminhados para própria página do portifólio, pois por enquanto não há nenhum projeto além desse, mas 
