Create navbar and header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
     <title>Jonathan Lopes</title>
 </head>
 <body>
-    
+    <nav class="navbar">
+        <a href="index.html" class="navbar__logotype">Portifólio</a>
+        <ul class="navbar__links">
+            <a href="index.html"><li>Home</li></a>
+            <a href="#"><li>Sobre mim</li></a>
+            <a href="#"><li>Experiência</li></a>
+            <a href="#"><li>Projetos</li></a>
+        </ul>
+    </nav>
+    <header class="header">
+        <article class="header__intro">
+            <h1 class="header__intro-hello">OLÁ, EU SOU</h1>
+            <h1 class="header__intro-name">JONATHAN LOPES</h1>
+            <h1 class="header__intro-work">DESENVOLVEDOR FRONT-END.</h1>
+
+            <div class="header__intro-links">
+                <a href="https://www.linkedin.com/in/jonathanglopes/" class="header__intro-linkedin"> <span class="btn-icon"><img src="assets/icons/icon-linkedin.png" alt="Ícone Linkedin" class="icon-social"></span> Linkedin</a>
+                <a href="https://github.com/JonathanGLopes" class="header__intro-github"> <span class="btn-icon"><img src="assets/icons/icon-github.png" alt="Ícone Github" class="icon-social"></span>  Github</a>
+            </div>
+        </article>
+
+        <img src="assets/img/img-personagem.svg" alt="Imagem personagem" class="header__img">
+    </header>
 </body>
 </html>
