Create about me section

--- a/index.html
+++ b/index.html
@@ -31,5 +31,28 @@
 
         <img src="assets/img/img-personagem.svg" alt="Imagem personagem" class="header__img">
     </header>
+
+    <main class="aboutme">
+        <img src="assets/img/eu.jpg" alt="Minha foto" class="aboutme-img">
+
+        <div class="aboutme__wrapper">
+            <article class="aboutme__text">
+                <h1 class="aboutme__title">SOBRE MIM</h1>
+                <h1 class="aboutme__city">São Paulo, Brasil</h1>
+                <p class="aboutme__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum minus vero magni reiciendis doloremque! Quasi reiciendis illum quisquam distinctio voluptate laborum et, quis atque, fugiat maxime minus quas aspernatur!</p>
+            </article>
+
+            <div class="aboutme__contact">
+                <a href="" class="aboutme__social-media"><img src="assets/icons/icon-facebook.png" alt="Ícone facebook" class="icon-social"></a>
+                <a href="" class="aboutme__social-media"><img src="assets/icons/icon-instagram.png" alt="Ícone instagram" class="icon-social"></a>
+                <a href="" class="aboutme__social-media"><img src="assets/icons/icon-whatsapp.png" alt="Ícone WhatsApp" class="icon-social"></a>
+            </div>
+
+            <div class="aboutme__button">
+                <a href="" class="aboutme__link-cirriculum"><span class="btn-icon"><img src="assets/icons/icon-download.svg" alt="Ícone download" class="icon-social"></span> Currículo</a>
+                <a href="" class="aboutme__link-mail"><span class="btn-icon"><img src="assets/icons/icon-mail.svg" alt="Ícone email" class="icon-social"></span>E-mail</a>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
