adding contact links

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
             </article>
 
             <div class="aboutme__contact">
-                <a href="" class="aboutme__social-media"><img src="assets/icons/icon-facebook.png" alt="Ícone facebook" class="icon-social"></a>
-                <a href="" class="aboutme__social-media"><img src="assets/icons/icon-instagram.png" alt="Ícone instagram" class="icon-social"></a>
-                <a href="" class="aboutme__social-media"><img src="assets/icons/icon-whatsapp.png" alt="Ícone WhatsApp" class="icon-social"></a>
+                <a href="https://www.facebook.com/jonathan.lopes11/" class="aboutme__social-media"><img src="assets/icons/icon-facebook.png" alt="Ícone facebook" class="icon-social"></a>
+                <a href="https://www.instagram.com/jonathan.btw/" class="aboutme__social-media"><img src="assets/icons/icon-instagram.png" alt="Ícone instagram" class="icon-social"></a>
+                <a href="https://wa.me/5511953614290" class="aboutme__social-media"><img src="assets/icons/icon-whatsapp.png" alt="Ícone WhatsApp" class="icon-social"></a>
             </div>
 
             <div class="aboutme__button">
-                <a href="" class="aboutme__link-cirriculum"><span class="btn-icon"><img src="assets/icons/icon-download.svg" alt="Ícone download" class="icon-social"></span> Currículo</a>
-                <a href="" class="aboutme__link-mail"><span class="btn-icon"><img src="assets/icons/icon-mail.svg" alt="Ícone email" class="icon-social"></span>E-mail</a>
+                <a href="assets/CV/Jonathan lopes CV.pdf" download="Jonathan Lopes CV" class="aboutme__link-cirriculum"><span class="btn-icon"><img src="assets/icons/icon-download.svg" alt="Ícone download" class="icon-social"></span> Currículo</a>
+                <a href="mailto:jonathan.lopes11@live.com" title=""" class="aboutme__link-mail"><span class="btn-icon"><img src="assets/icons/icon-mail.svg" alt="Ícone email" class="icon-social"></span>E-mail</a>
             </div>
         </div>
     </main>
