adding exp list

--- a/index.html
+++ b/index.html
@@ -54,5 +54,39 @@
             </div>
         </div>
     </main>
+
+    <section class="exp">
+        <div class="exp__wrapper">
+        <h1 class="exp__title">EXPERIÊNCIA</h1>
+
+        <div class="exp__wrap">
+            <ul class="exp__list">
+                <li id="dev">Dev</li>
+                <li id="regispel">Regispel</li>
+                <li id="tmkt">TMKT</li>
+            </ul>
+
+            <article class="exp__description-dev">
+               <span class="exp__span"> <h1 class="exp__description-title">Desenvolvedor Front-end</h1> <h2 class="exp__description-date">Nov 2021 - Atual</h2> </span>
+               <h1 class="exp__description-subtitle">Autônomo</h1>
+               <p class="exp__description-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum eveniet incidunt possimus! Ad ducimus dolorum aspernatur ea! Adipisci repellat minus facere accusamus eum similique maxime officia quisquam eos, qui voluptate.</p>
+            </article>
+
+            <article class="exp__description-regispel exp__description-disable">
+                <span class="exp__span"> <h1 class="exp__description-title">Auxiliar de expedição</h1> <h2 class="exp__description-date">Set 2018 - Ago 2020</h2> </span>
+                <h1 class="exp__description-subtitle">Regispel</h1>
+                <p class="exp__description-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum eveniet incidunt possimus! Ad ducimus dolorum aspernatur ea! Adipisci repellat minus facere accusamus eum similique maxime officia quisquam eos, qui voluptate.</p>
+             </article>
+
+             <article class="exp__description-tmkt exp__description-disable">
+                <span class="exp__span"> <h1 class="exp__description-title">Agente de atendimento</h1> <h2 class="exp__description-date">Dez 2014 - Dez 2015</h2> </span>
+                <h1 class="exp__description-subtitle">TMKT</h1>
+                <p class="exp__description-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum eveniet incidunt possimus! Ad ducimus dolorum aspernatur ea! Adipisci repellat minus facere accusamus eum similique maxime officia quisquam eos, qui voluptate.</p>
+             </article>
+        </div>
+    </section>
+
+
+    <script src="exp.js"></script>
 </body>
 </html>
