adding to exp_list active and inactive links

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="index.html" class="navbar__logotype">Portifólio</a>
+        <a href="index.html" class="navbar__logotype"><.Jonathan Lopes/></a>
         <ul class="navbar__links">
             <a href="index.html"><li>Home</li></a>
             <a href="#"><li>Sobre mim</li></a>
@@ -19,7 +19,7 @@
     </nav>
     <header class="header">
         <article class="header__intro">
-            <h1 class="header__intro-hello">OLÁ, EU SOU</h1>
+            <h1 class="header__intro-hello">OLÁ, EU SOU O </h1>
             <h1 class="header__intro-name">JONATHAN LOPES</h1>
             <h1 class="header__intro-work">DESENVOLVEDOR FRONT-END.</h1>
 
@@ -61,9 +61,9 @@
 
         <div class="exp__wrap">
             <ul class="exp__list">
-                <li id="dev">Dev</li>
-                <li id="regispel">Regispel</li>
-                <li id="tmkt">TMKT</li>
+                <li id="dev" class="dev-active">Dev</li>
+                <li id="regispel" class="exp__list-inactive">Regispel</li>
+                <li id="tmkt" class="exp__list-inactive">TMKT</li>
             </ul>
 
             <article class="exp__description-dev">
@@ -73,20 +73,22 @@
             </article>
 
             <article class="exp__description-regispel exp__description-disable">
-                <span class="exp__span"> <h1 class="exp__description-title">Auxiliar de expedição</h1> <h2 class="exp__description-date">Set 2018 - Ago 2020</h2> </span>
+                <span class="exp__span"> <h1 class="exp__description-title">Auxiliar de expedição</h1> <h2 class="exp__description-date">Set 2017 - Ago 2020</h2> </span>
                 <h1 class="exp__description-subtitle">Regispel</h1>
                 <p class="exp__description-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum eveniet incidunt possimus! Ad ducimus dolorum aspernatur ea! Adipisci repellat minus facere accusamus eum similique maxime officia quisquam eos, qui voluptate.</p>
              </article>
 
              <article class="exp__description-tmkt exp__description-disable">
-                <span class="exp__span"> <h1 class="exp__description-title">Agente de atendimento</h1> <h2 class="exp__description-date">Dez 2014 - Dez 2015</h2> </span>
+                <span class="exp__span"> <h1 class="exp__description-title">Agente de atendimento</h1> <h2 class="exp__description-date">Jan 2014 - Mar 2015</h2> </span>
                 <h1 class="exp__description-subtitle">TMKT</h1>
                 <p class="exp__description-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum eveniet incidunt possimus! Ad ducimus dolorum aspernatur ea! Adipisci repellat minus facere accusamus eum similique maxime officia quisquam eos, qui voluptate.</p>
              </article>
         </div>
     </section>
+    <section class="project">
 
+    </section>
 
-    <script src="exp.js"></script>
+    <script src="assets/components/scripts/exp.js"></script>
 </body>
 </html>
