Finalizing projects section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="index.html" class="navbar__logotype"><.Jonathan Lopes/></a>
+        <a href="index.html" class="navbar__logotype"><img src="assets/img/logo-branco.png" alt="Logotipo"></a>
         <ul class="navbar__links">
             <a href="index.html"><li>Home</li></a>
             <a href="#"><li>Sobre mim</li></a>
@@ -86,7 +86,61 @@
         </div>
     </section>
     <section class="project">
+        <h1 class="project__title">PROJETOS</h1>
 
+        <div class="project__wrapper">
+            <article class="project__card">
+                <img src="assets/img/petfood.jpg" alt="" class="project__img">
+                <h1 class="project__name">Petfood</h1>
+                <p class="project__description">Desenvolvido com objetivo de colocar em prática conceitos de como posicionar bem os elementos, display grid, JavaScript e muito mais. Além de também realizar a boa prática de desenvolver algo utilizando o Figma como base. Para conferir mais sobre o projeto pode acessar o link abaixo ou meu repositório no Github.</p>
+                <p class="project__tech">Tecnologias utilizadas no projeto</p>
+                    <ul class="project__tech-list">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                    </ul>
+
+                <a href="https://pet-food-rose.vercel.app/" class="project__link"><img src="assets/icons/icon-link.svg" alt="" class="icon-social"> Visualizar</a>
+            </article>
+            <article class="project__card">
+                <img src="assets/img/galeria.jpg" alt="" class="project__img">
+                <h1 class="project__name">Galeria</h1>
+                <p class="project__description">Projeto desenvolvido com o foco na utilização da tecnologia SASS. Toda parte visual foi feita com essa linguagem de estilização como forma de práticar o conteúdo estudado.<br><br><br></p>
+                <p class="project__tech">Tecnologias utilizadas no projeto</p>
+                <ul class="project__tech-list">
+                    <li>HTML</li>
+                    <li>SASS</li>
+                </ul>
+
+                <a href="https://jonathanglopes.github.io/Galeria/" class="project__link"><img src="assets/icons/icon-link.svg" alt="" class="icon-social"> Visualizar</a>
+            </article>
+            <article class="project__card">
+                <img src="assets/img/landing.JPG" alt="" class="project__img">
+                <h1 class="project__name">Landing Page</h1>
+                <p class="project__description">Página feita utilizando o Bootstrap como tecnologia principal, com o objetivo de aprender a forma de utilização da ferramenta e como ela pode nos ajudar no dia a dia como desenvolvedor.</p>
+                <p class="project__tech">Tecnologias utilizadas no projeto</p>
+                <ul class="project__tech-list">
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Bootstrap</li>
+                </ul>
+
+                <a href="https://jonathanglopes.github.io/Landing-Page/" class="project__link"><img src="assets/icons/icon-link.svg" alt="" class="icon-social"> Visualizar</a>
+            </article>
+            <article class="project__card">
+                <img src="assets/img/form.JPG" alt="" class="project__img">
+                <h1 class="project__name">Formulário Login</h1>
+                <p class="project__description">Formulário desenvolvido com o objetivo de práticar formas de validação e exibição de mensagens de correto e incorreto através do form.<br><br></p>
+                <p class="project__tech">Tecnologias utilizadas no projeto</p>
+                <ul class="project__tech-list">
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                </ul>
+
+                <a href="https://jonathanglopes.github.io/Signup-form/" class="project__link"><img src="assets/icons/icon-link.svg" alt="" class="icon-social"> Visualizar</a>
+            </article>
+        </div>
     </section>
 
     <script src="assets/components/scripts/exp.js"></script>
