--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
         </div>
     </section>
 
+    <footer class="footer">
+        <h3 class="footer__credits">Desenvolvido por </h3> <span class="footer__dev">Jonathan Lopes</span>
+        <a href="" class="footer__backtop">Voltar ao topo</a>
+    </footer>
+
     <script src="assets/components/scripts/exp.js"></script>
+    <script src="assets/components/scripts/backtop.js"></script>
 </body>
 </html>
