adding navbar links

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <a href="index.html" class="navbar__logotype"><img src="assets/img/logo-branco.png" alt="Logotipo"></a>
         <ul class="navbar__links">
             <a href="index.html"><li>Home</li></a>
-            <a href="#"><li>Sobre mim</li></a>
-            <a href="#"><li>Experiência</li></a>
-            <a href="#"><li>Projetos</li></a>
+            <a href="#sobre"><li>Sobre mim</li></a>
+            <a href="#xp"><li>Experiência</li></a>
+            <a href="#projeto"><li>Projetos</li></a>
         </ul>
     </nav>
     <header class="header">
@@ -32,7 +32,7 @@
         <img src="assets/img/img-personagem.svg" alt="Imagem personagem" class="header__img">
     </header>
 
-    <main class="aboutme">
+    <main class="aboutme" id="sobre">
         <img src="assets/img/eu.jpg" alt="Minha foto" class="aboutme-img">
 
         <div class="aboutme__wrapper">
@@ -55,7 +55,7 @@
         </div>
     </main>
 
-    <section class="exp">
+    <section class="exp" id="xp">
         <div class="exp__wrapper">
         <h1 class="exp__title">EXPERIÊNCIA</h1>
 
@@ -85,7 +85,7 @@
              </article>
         </div>
     </section>
-    <section class="project">
+    <section class="project" id="projeto">
         <h1 class="project__title">PROJETOS</h1>
 
         <div class="project__wrapper">
