edit link project

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <h1 class="header__intro-work">DESENVOLVEDOR FRONT-END.</h1>
 
             <div class="header__intro-links">
-                <a href="https://www.linkedin.com/in/jonathanglopes/" class="header__intro-linkedin"> <span class="btn-icon"><img src="assets/icons/icon-linkedin.png" alt="Ícone Linkedin" class="icon-social"></span> Linkedin</a>
-                <a href="https://github.com/JonathanGLopes" class="header__intro-github"> <span class="btn-icon"><img src="assets/icons/icon-github.png" alt="Ícone Github" class="icon-social"></span>  Github</a>
+                <a href="https://www.linkedin.com/in/jonathanglopes/" class="header__intro-linkedin" target="_blank"> <span class="btn-icon"><img src="assets/icons/icon-linkedin.png" alt="Ícone Linkedin" class="icon-social"></span> Linkedin</a>
+                <a href="https://github.com/JonathanGLopes" class="header__intro-github" target="_blank"> <span class="btn-icon"><img src="assets/icons/icon-github.png" alt="Ícone Github" class="icon-social"></span>  Github</a>
             </div>
         </article>
 
@@ -100,7 +100,7 @@
                         <li>JavaScript</li>
                     </ul>
 
-                <a href="https://pet-food-rose.vercel.app/" class="project__link"><img src="assets/icons/icon-link.svg" alt="" class="icon-social"> Visualizar</a>
+                <a href="https://pet-food-rose.vercel.app/" class="project__link" target="_blank"><img src="assets/icons/icon-link.svg" alt="" class="icon-social"> Visualizar</a>
             </article>
             <article class="project__card">
                 <img src="assets/img/galeria.jpg" alt="" class="project__img">
@@ -112,7 +112,7 @@
                     <li>SASS</li>
                 </ul>
 
-                <a href="https://jonathanglopes.github.io/Galeria/" class="project__link"><img src="assets/icons/icon-link.svg" alt="" class="icon-social"> Visualizar</a>
+                <a href="https://jonathanglopes.github.io/Galeria/" class="project__link" target="_blank"><img src="assets/icons/icon-link.svg" alt="" class="icon-social"> Visualizar</a>
             </article>
             <article class="project__card">
                 <img src="assets/img/landing.JPG" alt="" class="project__img">
@@ -125,7 +125,7 @@
                     <li>Bootstrap</li>
                 </ul>
 
-                <a href="https://jonathanglopes.github.io/Landing-Page/" class="project__link"><img src="assets/icons/icon-link.svg" alt="" class="icon-social"> Visualizar</a>
+                <a href="https://jonathanglopes.github.io/Landing-Page/" class="project__link" target="_blank"><img src="assets/icons/icon-link.svg" alt="" class="icon-social"> Visualizar</a>
             </article>
             <article class="project__card">
                 <img src="assets/img/form.JPG" alt="" class="project__img">
@@ -138,7 +138,7 @@
                     <li>JavaScript</li>
                 </ul>
 
-                <a href="https://jonathanglopes.github.io/Signup-form/" class="project__link"><img src="assets/icons/icon-link.svg" alt="" class="icon-social"> Visualizar</a>
+                <a href="https://jonathanglopes.github.io/Signup-form/" class="project__link" target="_blank"><img src="assets/icons/icon-link.svg" alt="" class="icon-social"> Visualizar</a>
             </article>
         </div>
     </section>
