Editing exp section texts

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <a href="index.html" class="navbar__logotype"><img src="assets/img/logo-branco.png" alt="Logotipo"></a>
         <ul class="navbar__links">
             <a href="index.html"><li>Home</li></a>
-            <a href="#sobre"><li>Sobre mim</li></a>
-            <a href="#xp"><li>Experiência</li></a>
-            <a href="#projeto"><li>Projetos</li></a>
+            <a href="#link-aboutme"><li>Sobre mim</li></a>
+            <a href="#link-exp"><li>Experiência</li></a>
+            <a href="#link-project"><li>Projetos</li></a>
         </ul>
     </nav>
     <header class="header">
         <article class="header__intro">
             <h1 class="header__intro-hello">OLÁ, EU SOU O </h1>
             <h1 class="header__intro-name">JONATHAN LOPES</h1>
-            <h1 class="header__intro-work">DESENVOLVEDOR FRONT-END.</h1>
+            <h1 class="header__intro-work">DESENVOLVEDOR FRONT-END</h1>
 
             <div class="header__intro-links">
                 <a href="https://www.linkedin.com/in/jonathanglopes/" class="header__intro-linkedin" target="_blank"> <span class="btn-icon"><img src="assets/icons/icon-linkedin.png" alt="Ícone Linkedin" class="icon-social"></span> Linkedin</a>
@@ -32,7 +32,7 @@
         <img src="assets/img/img-personagem.svg" alt="Imagem personagem" class="header__img">
     </header>
 
-    <main class="aboutme" id="sobre">
+    <main class="aboutme" id="link-aboutme">
         <img src="assets/img/eu.jpg" alt="Minha foto" class="aboutme-img">
 
         <div class="aboutme__wrapper">
@@ -55,7 +55,7 @@
         </div>
     </main>
 
-    <section class="exp" id="xp">
+    <section class="exp" id="link-exp">
         <div class="exp__wrapper">
         <h1 class="exp__title">EXPERIÊNCIA</h1>
 
@@ -69,23 +69,23 @@
             <article class="exp__description-dev">
                <span class="exp__span"> <h1 class="exp__description-title">Desenvolvedor Front-end</h1> <h2 class="exp__description-date">Nov 2021 - Atual</h2> </span>
                <h1 class="exp__description-subtitle">Autônomo</h1>
-               <p class="exp__description-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum eveniet incidunt possimus! Ad ducimus dolorum aspernatur ea! Adipisci repellat minus facere accusamus eum similique maxime officia quisquam eos, qui voluptate.</p>
+               <p class="exp__description-text">Atualmente como desenvolvedor front-end, meu foco é trabalhar em projetos pessoais para desenvolver minhas hard skills como dev. Estudando sobre novas tendências e tecnologias para me atualizar e aplicar em tudo que faço.</p>
             </article>
 
             <article class="exp__description-regispel exp__description-disable">
                 <span class="exp__span"> <h1 class="exp__description-title">Auxiliar de expedição</h1> <h2 class="exp__description-date">Set 2017 - Ago 2020</h2> </span>
                 <h1 class="exp__description-subtitle">Regispel</h1>
-                <p class="exp__description-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum eveniet incidunt possimus! Ad ducimus dolorum aspernatur ea! Adipisci repellat minus facere accusamus eum similique maxime officia quisquam eos, qui voluptate.</p>
+                <p class="exp__description-text">Nesse período minha função era a conferência de materiais produzidos e organiza-los no estoque, assim como os registrar no sistema para todos terem conhecimento de sua localização e quantidade. Além disso fazia separação de pedidos dos clientes e uma pré conferência deles.</p>
              </article>
 
              <article class="exp__description-tmkt exp__description-disable">
                 <span class="exp__span"> <h1 class="exp__description-title">Agente de atendimento</h1> <h2 class="exp__description-date">Jan 2014 - Mar 2015</h2> </span>
                 <h1 class="exp__description-subtitle">TMKT</h1>
-                <p class="exp__description-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum eveniet incidunt possimus! Ad ducimus dolorum aspernatur ea! Adipisci repellat minus facere accusamus eum similique maxime officia quisquam eos, qui voluptate.</p>
+                <p class="exp__description-text">Nesse período minha função era atendimento receptivo ao cliente, auxiliando o mesmo com problemas na sua linha telefônica, tirando dúvidas sobre planos e o funcionamento deles e também fazendo a assinatura do plano para o cliente caso fosse de seu interesse.</p>
              </article>
         </div>
     </section>
-    <section class="project" id="projeto">
+    <section class="project" id="link-project">
         <h1 class="project__title">PROJETOS</h1>
 
         <div class="project__wrapper">
