--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <nav class="navbar">
         <a href="index.html" class="navbar__logotype"><img src="assets/img/logo-branco.png" alt="Logotipo"></a>
+        <a href="#" class="navbar__menu"><img src="assets/icons/menu.png" alt="Icone menu" class="navbar__menu-hamburguer"></a>
         <ul class="navbar__links">
             <a href="index.html"><li>Home</li></a>
             <a href="#link-aboutme"><li>Sobre mim</li></a>
