--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <a href="index.html" class="navbar__logotype"><img src="assets/img/logo-branco.png" alt="Logotipo"></a>
         <a href="#" class="navbar__menu"><img src="assets/icons/menu.png" alt="Icone menu" class="navbar__menu-hamburguer"></a>
         <ul class="navbar__links">
-            <a href="index.html"><li>Home</li></a>
-            <a href="#link-aboutme"><li>Sobre mim</li></a>
-            <a href="#link-exp"><li>Experiência</li></a>
-            <a href="#link-project"><li>Projetos</li></a>
+            <a href="index.html" class="nav-link"><li>Home</li></a>
+            <a href="#link-aboutme" class="nav-link"><li>Sobre mim</li></a>
+            <a href="#link-exp" class="nav-link"><li>Experiência</li></a>
+            <a href="#link-project" class="nav-link"><li>Projetos</li></a>
         </ul>
     </nav>
     <header class="header">
