adjust menu mobile

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
         <a href="index.html" class="navbar__logotype"><img src="assets/img/logo-branco.png" alt="Logotipo"></a>
         <a href="#" class="navbar__menu"><img src="assets/icons/menu.png" alt="Icone menu" class="navbar__menu-hamburguer"></a>
-        <ul class="navbar__links">
+        <ul class="navbar__links wrap-nav">
             <a href="index.html" class="nav-link"><li>Home</li></a>
             <a href="#link-aboutme" class="nav-link"><li>Sobre mim</li></a>
             <a href="#link-exp" class="nav-link"><li>Experiência</li></a>
