about me description

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <article class="aboutme__text">
                 <h1 class="aboutme__title">SOBRE MIM</h1>
                 <h1 class="aboutme__city">São Paulo, Brasil</h1>
-                <p class="aboutme__description">Esforçado e dedicado em tudo que faço, hoje atuo como desenvolvedor Front-end. Sempre buscando conhecimento e aberto a novas experiências. Simpático, gentil e de bem com a vida, procurando agregar positivamente em qualquer ambiente em que estou presente.</p>
+                <p class="aboutme__description">Me chamo Jonathan, tenho 26 anos e hoje atuo como desenvolvedor Front-end. Sempre buscando conhecimento e aberto a novas experiências. Simpático, gentil e de bem com a vida, procurando agregar positivamente em qualquer ambiente em que estou presente.</p>
             </article>
 
             <div class="aboutme__contact">
