Adicionando container e centralizando todo conteudo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Jonathan Lopes</title>
 </head>
 <body>
+    <div class="container">
     <nav class="navbar">
         <a href="index.html" class="navbar__logotype"><img src="assets/img/logo-branco.png" alt="Logotipo"></a>
         <a href="#" class="navbar__menu"><img src="assets/icons/menu.png" alt="Icone menu" class="navbar__menu-hamburguer"></a>
@@ -148,7 +149,7 @@
         <h3 class="footer__credits">Desenvolvido por </h3> <span class="footer__dev">Jonathan Lopes</span>
         <a href="" class="footer__backtop">Voltar ao topo</a>
     </footer>
-
+</div>
     <script src="assets/components/scripts/exp.js"></script>
     <script src="assets/components/scripts/backtop.js"></script>
     <script src="assets/components/scripts/menu-mobile.js"></script>
