Adicionando novo projeto a seção.

--- a/index.html
+++ b/index.html
@@ -105,16 +105,18 @@
                 <a href="https://pet-food-rose.vercel.app/" class="project__link" target="_blank"><img src="assets/icons/icon-link.svg" alt="" class="icon-social"> Visualizar</a>
             </article>
             <article class="project__card">
-                <img src="assets/img/galeria.jpg" alt="" class="project__img">
-                <h1 class="project__name">Galeria</h1>
-                <p class="project__description">Projeto desenvolvido com o foco na utilização da tecnologia SASS. Toda parte visual foi feita com essa linguagem de estilização como forma de práticar o conteúdo estudado.<br><br><br></p>
+                <img src="assets/img/anime.png" alt="" class="project__img">
+                <h1 class="project__name">Ani.me</h1>
+                <p class="project__description">Projeto desenvolvido como desafio da comunidade Codelândia, com a ideia de criar uma plataforma fictícia de anime. O mesmo possui um carrossel de imagens para simular uma seção de destaques e um catálogo utilizando o grid para facilitar o posicionamento dos elementos. Você pode acessar o link abaixo para conferir o deploy ou acessar o meu Github.</p>
                 <p class="project__tech">Tecnologias utilizadas no projeto</p>
                 <ul class="project__tech-list">
                     <li>HTML</li>
-                    <li>SASS</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>Swiper JS</li>
                 </ul>
 
-                <a href="https://jonathanglopes.github.io/Galeria/" class="project__link" target="_blank"><img src="assets/icons/icon-link.svg" alt="" class="icon-social"> Visualizar</a>
+                <a href="https://anime-psi.vercel.app/" class="project__link" target="_blank"><img src="assets/icons/icon-link.svg" alt="" class="icon-social"> Visualizar</a>
             </article>
             <article class="project__card">
                 <img src="assets/img/landing.JPG" alt="" class="project__img">
