--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
 
             <div class="aboutme__button">
-                <a href="assets/CV/Jonathan lopes CV.pdf" download="Jonathan Lopes CV" class="aboutme__link-cirriculum"><span class="btn-icon"><img src="assets/icons/icon-download.svg" alt="Ícone download" class="icon-social"></span> Currículo</a>
+                <a href="assets/CV/Jonathan CV .pdf" download="Jonathan Lopes CV" class="aboutme__link-cirriculum"><span class="btn-icon"><img src="assets/icons/icon-download.svg" alt="Ícone download" class="icon-social"></span> Currículo</a>
                 <a href="mailto:jonathan.lopes11@live.com" title=""" class="aboutme__link-mail"><span class="btn-icon"><img src="assets/icons/icon-mail.svg" alt="Ícone email" class="icon-social"></span>E-mail</a>
             </div>
         </div>
