refatorando header e nav

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
     <nav class="navbar">
-        <a href="index.html" class="navbar__logotype"><img src="assets/img/logo-branco.png" alt="Logotipo"></a>
+        <a href="index.html" class="navbar__logo"><img src="assets/img/logo-branco.png" alt="Logotipo"></a>
         <a href="#" class="navbar__menu"><img src="assets/icons/menu.png" alt="Icone menu" class="navbar__menu-hamburguer"></a>
         <ul class="navbar__links wrap-nav">
             <a href="index.html" class="nav-link"><li>Home</li></a>
@@ -21,9 +21,9 @@
     </nav>
     <header class="header">
         <article class="header__intro">
-            <h1 class="header__intro-hello">OLÁ, EU SOU O </h1>
-            <h1 class="header__intro-name">JONATHAN LOPES</h1>
-            <h1 class="header__intro-work">DESENVOLVEDOR FRONT-END</h1>
+            <h1 class="header__intro-ola">OLÁ, EU SOU O </h1>
+            <h1 class="header__intro-nome">JONATHAN LOPES</h1>
+            <h1 class="header__intro-funcao">DESENVOLVEDOR FRONT-END</h1>
 
             <div class="header__intro-links">
                 <a href="https://www.linkedin.com/in/jonathanglopes/" class="header__intro-linkedin" target="_blank"> <span class="btn-icon"><img src="assets/icons/icon-linkedin.png" alt="Ícone Linkedin" class="icon-social"></span> Linkedin</a>
